<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">
    <!--The background from https://www.pinterest.com.au/pin/562809284665166685/-->
    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Gomoku"
        android:textSize="32dp"
        android:textStyle="bold"
        android:textColor="@color/Black"
        android:shadowColor="@color/OldLace"
        android:shadowDx="1.5"
        android:shadowDy="1.5"
        android:shadowRadius="2"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        />

    <LinearLayout
        android:id="@+id/layout_Buttons"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/text_title"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/btn_VsCom"
            android:text="One Player"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="@color/DarkGray"
            android:background="@color/Black"
            android:onClick="onClick_VsCom"/>
        <Button
            android:id="@+id/btn_VsPlayer"
            android:text="Two Players"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="@color/DarkGray"
            android:background="@color/Black"
            android:onClick="onClick_VsPlayer"/>
        <Button
            android:id="@+id/btn_CheckRecords"
            android:text="Record"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="@color/DarkGray"
            android:background="@color/Black"
            android:onClick="onClick_CheckRecords"/>
        <Button
            android:id="@+id/game_instruction"
            android:text="Instruction"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="@color/DarkGray"
            android:background="@color/Black"
            android:onClick="onClick_Instructions"/>

    </LinearLayout>
</RelativeLayout>