<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/w3"
    tools:context=".Game">

    <LinearLayout
        android:id="@+id/topContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/newGameButten"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="New Game"
                android:textStyle="bold"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/DarkGray"
                android:background="@color/Black" />
            <Button
                android:id="@+id/menuButten"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Main Menu"
                android:textStyle="bold"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/DarkGray"
                android:background="@color/Black" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/playerOne_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Player One"
                android:paddingBottom="5dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:gravity="center"
                android:background="@color/BurlyWood"
                />
            <TextView
                android:id="@+id/playerTwo_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Player Two"
                android:paddingBottom="5dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:gravity="center"
                android:background="@color/BurlyWood"
                />
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/boardGame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/topContent"
        >

    </LinearLayout>
</RelativeLayout>